fix overflow issue and images.

--- a/src/Pages/styles/Home.module.css
+++ b/src/Pages/styles/Home.module.css
@@ -13,6 +13,8 @@
 
     .mobile {
         display: block;
+        width: 100vw;
+        overflow-x: hidden;
     }
 
     .nav {
